--- a/client/src/global.css
+++ b/client/src/global.css
@@ -98,6 +98,13 @@
   padding: 0;
 }
 
+html,
+body,
+#root {
+  height: 100%;
+  margin: 0;
+}
+
 ::-webkit-scrollbar {
   width: 4px;
   height: 4px;
