--- a/client/src/primitives.module.css
+++ b/client/src/primitives.module.css
@@ -119,6 +119,7 @@
   align-items: center;
   justify-content: center;
   height: 100%;
+  flex: 1;
   gap: 10px;
   color: var(--dim);
 }
